refactor: Java17 문법 적용하여 toList 반환